plugin/type_uuid/sql_type_uuid.h
@@ -154,6 +154,10 @@ public:
     {
       return memcmp(a + m_memory_pos, b + m_memory_pos, m_length);
     }
+    int cmp_swap_noswap(const char *a, const char *b) const
+    {
+      return memcmp(a + m_memory_pos, b + m_record_pos, m_length);
+    }
     void hash_record(const uchar *ptr, Hasher *hasher) const
     {
       hasher->add(&my_charset_bin, ptr + m_record_pos, m_length);
@@ -236,6 +240,18 @@ public:
     segment(4).hash_record(ptr, hasher);
   }
 
+  static int cmp_swap_noswap(const LEX_CSTRING &a, const LEX_CSTRING &b)
+  {
+    int res;
+    if ((res= segment(4).cmp_swap_noswap(a.str, b.str)) ||
+        (res= segment(3).cmp_swap_noswap(a.str, b.str)) ||
+        (res= segment(2).cmp_swap_noswap(a.str, b.str)) ||
+        (res= segment(1).cmp_swap_noswap(a.str, b.str)) ||
+        (res= segment(0).cmp_swap_noswap(a.str, b.str)))
+      return  res;
+    return 0;
+  }
+
   // Compare two in-memory values
   static int cmp(const LEX_CSTRING &a, const LEX_CSTRING &b)
   {
@@ -254,6 +270,10 @@ public:
         return  res;
       return 0;
     }
+    else if (swap_a && !swap_b)
+      return cmp_swap_noswap(a, b);
+    else if (!swap_a && swap_b)
+      return -cmp_swap_noswap(b, a);
     return memcmp(a.str, b.str, binary_length());
   }
 
